Fix the see project button position on mobile version container

--- a/style.css
+++ b/style.css
@@ -220,6 +220,7 @@ nav {
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
+  margin-top: 0.4rem;
   cursor: pointer;
 }
 
